# apple_sugar_detection-

./: create_docker.sh  main.py  pyproject.toml  requirements.txt  run_tensorboard.sh  test.ipynb
src/: config.py  dataset.py  metrics.py  model.py  trainer.py  utils.py
